web/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-web
  namespace: blog-web
spec:
  selector:
    matchLabels:
      app: blog-web
  template:
    metadata:
      labels:
        app: blog-web
    spec:
      containers:
      - name: blog-web
        image: ghcr.io/narumir/blog-web:0.0.3
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
