web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-web
  namespace: blog-web
spec:
  selector:
    app: blog-web
  ports:
  - port: 80
    targetPort: 3000
