web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-web
  namespace: blog-web
  labels:
    name: blog-web
spec:
  rules:
    - host: narumir.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: blog-web
                port:
                  number: 80
  tls:
    - hosts:
        - narumir.io
      secret: letsencrypt
